--- a/CKD.Web/CKD.Web.csproj
+++ b/CKD.Web/CKD.Web.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\CKD.DataAccess\CKD.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
